--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@ html {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
 }
+
+h2:hover {
+  color: red;
+}
